Created Python script for Q learning a maze

--- a/Q-Learning.ipynb
+++ b/Q-Learning.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "dc5e69c2-6ba4-4b32-9fc9-4b933db735c2",
    "metadata": {},
    "outputs": [],
@@ -54,14 +54,14 @@
     "x = len(R)\n",
     "y = len(R[0])\n",
     "states = x*y\n",
-    "Q = np.zeros((x*y, 4))\n",
+    "Q = np.zeros((states, 4))\n",
     "max_steps = 200\n",
     "goal_state = 49"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "a0d06085-be9d-42db-82ed-33f3673f0fa6",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "id": "48aab3bc-2043-4119-a244-1694c0336a4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.,  0., -1.,  0.],\n",
+       "       [-1., -1.,  0.,  0.],\n",
+       "       [-1., -1.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1.,  0., -1.,  0.],\n",
+       "       [-1.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1.,  0., -1.,  0.],\n",
+       "       [-1., -1.,  0.,  0.],\n",
+       "       [-1.,  0.,  0., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [-1., -1.,  0.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0., -1., -1.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [ 0., -1.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0., -1., -1.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [-1., -1.,  0.,  0.],\n",
+       "       [-1.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [-1.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0.,  0., -1.,  0.],\n",
+       "       [-1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., -1.],\n",
+       "       [ 0., -1., -1.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [-1., -1.,  0.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [ 0., -1.,  0., -1.],\n",
+       "       [-1., -1., -1., -1.],\n",
+       "       [ 0., -1., -1.,  0.],\n",
+       "       [ 0., -1.,  0.,  0.],\n",
+       "       [ 0., -1.,  0., -1.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "119b593c-08f1-41c5-a5a3-d690e4ef4f93",
    "metadata": {},
    "outputs": [],
@@ -105,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "dfd6f35b-4cbe-4131-a120-c180ffedc783",
    "metadata": {},
    "outputs": [],
@@ -124,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "bbe01e0b-ee8f-42a0-a658-fa3d51e9a957",
    "metadata": {},
    "outputs": [],
@@ -133,12 +243,13 @@
     "    \"\"\"\n",
     "    Update Q table\n",
     "    \"\"\"\n",
-    "    Q[state][actions.index(action)] = alpha * (reward + gamma * np.max(Q[next_state]))"
+    "    #Q[state][actions.index(action)] = alpha * (reward + np.max(Q[next_state]))\n",
+    "    Q[state][actions.index(action)] += alpha * (reward + gamma * np.max(Q[next_state]) - Q[state][actions.index(action)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "879ad562-62db-48ae-8459-5558a75f204d",
    "metadata": {},
    "outputs": [
@@ -146,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.14 s, sys: 71.3 ms, total: 3.21 s\n",
-      "Wall time: 3.13 s\n"
+      "CPU times: user 3.79 s, sys: 67 ms, total: 3.85 s\n",
+      "Wall time: 3.79 s\n"
      ]
     }
    ],
@@ -183,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "ee4c9536-37f7-4cf7-804e-272b61a29131",
    "metadata": {},
    "outputs": [],
@@ -203,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "41a4c33b-58e9-4471-a525-2b49f54b096b",
    "metadata": {},
    "outputs": [],
@@ -213,17 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "a82faa86-d94b-4671-8038-155049681726",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "67"
+       "54"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "e8fb4ff7-52ed-4a91-b443-fbf3022f99aa",
    "metadata": {},
    "outputs": [],
@@ -244,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "848327b4-d408-4018-b6ae-1014de9c5608",
    "metadata": {},
    "outputs": [],
@@ -260,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "99d0e923-f33a-46cc-a87b-627656c99259",
    "metadata": {},
    "outputs": [
@@ -270,7 +381,7 @@
        "49"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,17 +392,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "614b18a9-178c-4807-9f77-958705d5691b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[67, 77, 78, 79, 69, 59, 49]"
+       "[54, 55, 56, 57, 67, 77, 78, 79, 69, 59, 49]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,17 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "49fdb1e6-b113-4290-a4da-d824311d5438",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "11"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +434,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "a243ccf1-44d5-41fa-b445-fc4f5f42d6ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([407.39930098, 367.67786914,  -1.        ,  -1.        ])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q[50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8072accd-fe0b-4602-ab13-bb0876def03a",
    "metadata": {},
    "outputs": [],
    "source": []
